# c_test

./: .gitignore  CMakeLists.txt  README.md  cpp_makefile  makefile  read.py
.github/workflows/: 20210614_automated_build.md  Cmake2.yml  blank.yml  build.yml  cmake.yml  msbuild.yml  parasoft.yml  test.yml
docs/: c_test.md
src/: main.c
src/lib/: lib_test.c  lib_test.h
